<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="com.aunthtoo.posibilitywithyourcrush.Main">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_weight="2"
        android:background="@drawable/header">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/title"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/body">

        <LinearLayout
            android:id="@+id/b1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:shadowColor="@android:color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/you"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:shadowColor="@android:color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/crush"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/b2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/b1"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/heart"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/heart" />

            <RelativeLayout
                android:id="@+id/r1"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/heart"
                android:layout_margin="5dp"
                android:layout_toLeftOf="@id/heart"
                android:background="@drawable/bg"
                android:padding="3dp">

                <EditText
                    android:id="@+id/uname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="You ..."
                    android:inputType="textNoSuggestions"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/r2"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/heart"
                android:layout_margin="5dp"
                android:layout_toRightOf="@id/heart"
                android:background="@drawable/bg"
                android:padding="3dp">

                <EditText
                    android:id="@+id/cname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Crush ..."
                    android:inputType="textNoSuggestions"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/b3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/b2"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/toCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btnbg"
                android:padding="10dp"
                android:shadowColor="@android:color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/check"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/b4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/b3"
            android:layout_marginTop="10dp">


            <View
                android:id="@+id/v1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v1"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:shadowColor="@android:color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/result"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/res"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="3dp"
                android:background="@color/colorPrimary" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/finish"
            android:layout_below="@id/b4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:layout_margin="5dp">


            <View
                android:id="@+id/forRes"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


    </RelativeLayout>
</LinearLayout>
